Removendo um post e atualizando index.

--- a/_posts/2018-02-23-calculando-diferenca-entre-duas-datas-no-formato-yyyymmddhh-shell.html
+++ b/_posts/2018-02-23-calculando-diferenca-entre-duas-datas-no-formato-yyyymmddhh-shell.html
@@ -55,7 +55,7 @@ permalink: "/2018/02/23/calculando-diferenca-entre-duas-datas-no-formato-yyyymmd
 </ol>
 </li>
 </ol>
-<p>[code language="bash"]<br />
+<pre><br />
 #! /bin/ksh</p>
 <p>#set -o xtrace</p>
 <p>data_anl=${1}<br />
@@ -92,6 +92,6 @@ data_fct=${2}</p>
 <p>}</p>
 <p>datediff ${data_anl} ${data_fct}</p>
 <p>echo &quot;${dd_diff} dia(s) e ${hh_diff} hora(s) ou ${hh_tot} hora(s)&quot;</p>
-<p>exit 0<br />
-[/code]</p>
+<p>exit 0</p>
+</pre>
 <p>É isso!</p>
